[package]
name = "movement_logic"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nalgebra = "0.33"

# WASM dependencies (optional)
wasm-bindgen = { version = "0.2", optional = true }

[dependencies.web-sys]
version = "0.3"
optional = true
features = [
  "console",
]

[features]
default = []
wasm = ["wasm-bindgen", "web-sys", "console_error_panic_hook"]

[dependencies.console_error_panic_hook]
version = "0.1.6"
optional = true
